--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <title>3D Solar System</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
-    <div id="info">Click and drag to rotate | Scroll to zoom</div>
+    <div id="ui">
+        <div id="info">
+            <div>Click/Touch+Drag: Rotate</div>
+            <div>Pinch/Scroll: Zoom</div>
+            <div id="scale-info">Scale: 1x (Display Scale)</div>
+        </div>
+        <div id="controls">
+            <label for="speed-control">Speed:</label>
+            <input type="range" id="speed-control" min="0" max="2" step="0.1" value="1">
+            <button id="scale-toggle">Toggle Scale</button>
+        </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="app.js" defer></script>
 </body>
