--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>3D Solar System</title>
     <link rel="stylesheet" href="styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
+    <div id="loading">Loading Solar System...</div>
     <div id="ui">
         <div id="info">
-            <div>Click/Touch+Drag: Rotate</div>
-            <div>Pinch/Scroll: Zoom</div>
-            <div id="scale-info">Scale: 1x (Display Scale)</div>
+            <div>Drag to rotate | Scroll/Pinch to zoom</div>
+            <div id="scale-info">Scale: Display (1:1B km)</div>
         </div>
         <div id="controls">
             <label for="speed-control">Speed:</label>
-            <input type="range" id="speed-control" min="0" max="2" step="0.1" value="1">
+            <input type="range" id="speed-control" min="0" max="3" step="0.1" value="1">
             <button id="scale-toggle">Toggle Scale</button>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="app.js" defer></script>
 </body>
+</html>
 </html>
