--- a/index.html
+++ b/index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>3D Solar System</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="loading">Loading Solar System...</div>
     <div id="ui">
-        <div id="info">
-            <div>Drag to rotate | Scroll/Pinch to zoom</div>
-            <div id="scale-info">Scale: Display (1:1B km)</div>
+        <div class="control-group">
+            <label>Speed: <input type="range" id="speed" min="0" max="2" step="0.1" value="1"></label>
         </div>
-        <div id="controls">
-            <label for="speed-control">Speed:</label>
-            <input type="range" id="speed-control" min="0" max="3" step="0.1" value="1">
-            <button id="scale-toggle">Toggle Scale</button>
+        <div class="control-group">
+            <label>Zoom: <input type="range" id="zoom" min="10" max="200" value="50"></label>
         </div>
+        <button id="reset">Reset View</button>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="app.js" defer></script>
+    <script src="app.js"></script>
 </body>
-</html>
 </html>
