--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Solar System</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="ui">
-        <div class="control-group">
-            <label>Speed: <input type="range" id="speed" min="0" max="2" step="0.1" value="1"></label>
+    <div id="container">
+        <div id="controls">
+            <label for="speed">Speed:</label>
+            <input type="range" id="speed" min="0.1" max="5" step="0.1" value="1">
         </div>
-        <div class="control-group">
-            <label>Zoom: <input type="range" id="zoom" min="10" max="200" value="50"></label>
-        </div>
-        <button id="reset">Reset View</button>
+        <canvas id="solarSystem"></canvas>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
